--- a/wp-content/themes/medigreen-child/style.css
+++ b/wp-content/themes/medigreen-child/style.css
@@ -695,6 +695,17 @@ body {
 
 .current-cat a {
 	font-weight: 600;
+	color: #004471;
+}
+
+.woof_container {
+	border-bottom: 1px solid rgba(0, 0, 0, .07);
+	padding-bottom: 11px;
+	margin-bottom: 15px;
+}
+
+.woof_container.woof_container_pa_types {
+	border-bottom: none !important;
 }
 
 .button br,
@@ -778,12 +789,19 @@ td.actions p {
 	padding-top: 2px !important;
 }
 
-.btSidebar .btBox {
-	margin-bottom: 18px;
+.btSidebar .btBox.widget_product_categories {
+	padding-bottom: 15px;
+	margin-bottom: 15px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.07);
 }
 
 .btSidebar .woof_checkbox_sales_container {
-	margin-bottom: 13px;
+	margin-bottom: 15px;
+	padding-bottom: 15px;
+}
+
+.btSidebar .woof_checkbox_sales_container label {
+	margin-left: 4px;
 }
 
 .btSidebar li {
@@ -792,8 +810,8 @@ td.actions p {
 }
 
 .btSidebar li a {
-	padding: 5px 0;
-	font-size: 16px;
+	padding: 6px 0;
+	font-size: 15px;
 	line-height: 1;
 }
 
@@ -812,6 +830,11 @@ td.actions p {
 
 .btSidebar .woof_container_inner > div {
 	margin-bottom: 4px;
+}
+
+.woof_checkbox_label {
+	padding-top: 2px !important;
+	padding-bottom: 2px !important;
 }
 
 .products li.product .btWooShopLoopItemInner .bt_bb_headline {
@@ -1016,7 +1039,8 @@ p.stock.out-of-stock {
 	flex-shrink: 0;
 	width: 18px;
 	height: 14px;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23004471' viewBox='0 0 512 512'%3E%3Cpath d='M3.9 54.9C10.5 40.9 24.5 32 40 32H472c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9V448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3L208.3 428c-7.4-5.6-11.8-14.3-11.8-23.6V320.9L14 97.4C4.2 85.4 1.2 68.9 3.9 54.9z'/%3E%3C/svg%3E");	background-repeat: no-repeat;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23004471' viewBox='0 0 512 512'%3E%3Cpath d='M3.9 54.9C10.5 40.9 24.5 32 40 32H472c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9V448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3L208.3 428c-7.4-5.6-11.8-14.3-11.8-23.6V320.9L14 97.4C4.2 85.4 1.2 68.9 3.9 54.9z'/%3E%3C/svg%3E");
+	background-repeat: no-repeat;
 	background-size: contain;
 }
 
@@ -1089,8 +1113,28 @@ p.stock.out-of-stock {
 
 	.btBox.WOOF_Widget,
 	.widget_product_categories {
-		padding-left: 15px;
-		padding-right: 15px;
+		padding-left: 20px;
+		padding-right: 0;
+	}
+}
+
+@media (pointer: coarse) {
+	.widget_product_categories {
+		position: relative;
+
+		&:before {
+			content: "";
+			position: absolute;
+			bottom: -2px;
+			left: 0;
+			width: 20px;
+			height: 5px;
+			background-color: #fff;
+		}
+	}
+
+	body:has(.woocommerce-no-products-found) .btSidebar-toggle {
+		top: 14px !important;
 	}
 }
 
@@ -1134,6 +1178,86 @@ body.mobile-filters-open .btSidebar-overlay {
 		left: 30px;
 		top: 50px;
 		max-width: 150px;
+	}
+}
+
+/* checkout */
+
+.checkout-layout-grid {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 30px;
+	margin-top: 20px;
+}
+
+.checkout-layout-left {
+	flex: 1 1 40%;
+	min-width: 320px;
+}
+
+.checkout-layout-right {
+	flex: 1 1 50%;
+	min-width: 300px;
+	height: fit-content;
+
+	background: #f9f9f9;
+	padding: 20px;
+	border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+	.checkout-layout-grid {
+		flex-direction: column;
+	}
+
+	.checkout-layout-left,
+	.checkout-layout-right {
+		width: 100%;
+		flex: auto;
+	}
+}
+
+#customer_details {
+	display: flex;
+	flex-direction: column;
+
+	> div {
+		width: 100%;
+	}
+}
+
+#order_review_heading {
+	margin: 0 0 1em;
+	padding: 0;
+	font-size: 1.4em;
+}
+
+body.woocommerce-checkout .bt_bb_section.bt_bb_top_spacing_medium > .bt_bb_port {
+	padding-top: 50px !important;
+	padding-bottom: 50px !important;
+}
+
+body.woocommerce-checkout form.checkout, .cart_totals {
+	margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1199px) {
+	body.woocommerce-checkout .bt_bb_section.bt_bb_top_spacing_medium > .bt_bb_port {
+		padding-top: 0 !important;
+		padding-bottom: 0 !important;
+	}
+
+	body.woocommerce-checkout form.checkout, .cart_totals {
+		margin-bottom: 60px;
+	}
+
+	body.woocommerce-checkout p:empty {
+		display: none !important;
+	}
+
+	body.woocommerce-checkout #customer_details .col-1,
+	body.woocommerce-checkout #customer_details .col-2 {
+		margin-bottom: 0;
 	}
 }
 
