--- a/wp-content/themes/medigreen-child/style.css
+++ b/wp-content/themes/medigreen-child/style.css
@@ -75,12 +75,12 @@
 }
 
 .btMenuHorizontal .menuPort > nav > ul > li {
-	padding-right: 40px;
+	padding-right: 20px;
 }
 
 @media (min-width: 1200px) {
 	.btMenuHorizontal .menuPort > nav > ul > li {
-		padding-right: 40px !important;
+		padding-right: 20px !important;
 	}
 
 	/* top bar */
@@ -91,8 +91,8 @@
 
 	.mainHeaderInner .port nav {
 		position: absolute;
-		left: 50%;
-		transform: translateX(-50%);
+		left: 260px;
+		/*transform: translateX(-50%);*/
 		padding-left: 0 !important;
 		padding-right: 0 !important;
 	}
@@ -108,6 +108,50 @@
 
 	div.btButtonWidget a.btButtonWidgetLink {
 		padding: 8px 20px !important;
+	}
+}
+
+@media screen and (max-width: 1590px) {
+	.mainHeaderInner .port nav {
+		left: 250px;
+	}
+
+	.menuPort nav ul a {
+		font-size: 14px;
+	}
+}
+
+@media screen and (max-width: 1465px) {
+
+	.menuPort nav ul a {
+		font-size: 13px;
+	}
+}
+
+@media (min-width: 1200px) and (max-width: 1415px) {
+	.menuPort nav ul {
+		display: flex !important;
+		align-items: center !important;
+		align-content: center;
+		flex-wrap: wrap;
+		padding-right: 325px !important;
+		height: 70px;
+	}
+
+	.menuPort nav > ul > li > a {
+		line-height: 1.5 !important;
+		white-space: nowrap;
+	}
+
+	.menuPort nav ul a {
+		font-size: 14px;
+	}
+}
+
+
+@media screen and (max-width: 1199px) {
+	.menuPort nav ul a {
+		font-size: 16px;
 	}
 }
 
@@ -459,6 +503,10 @@
 	margin-bottom: -147px;
 	position: relative;
 	z-index: 1;
+
+	&.page-telegram-section-telegram-inner {
+		margin-bottom: 50px;
+	}
 }
 
 @media screen and (max-width: 992px) {
@@ -1339,4 +1387,369 @@ body.woocommerce-checkout form.checkout, .cart_totals {
 		margin-bottom: 0;
 	}
 }
+
+/* Page Contacts */
+
+.about-row span:has(img) {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 60px;
+	height: 60px;
+	padding: 4px;
+	border-radius: 50%;
+	background-color: #004471;
+	border: 5px solid #789bb2;
+
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+	}
+}
+
+.page-contacts-list-row h3 {
+	font-size: 27px !important;
+	font-weight: 600 !important;
+}
+
+@media screen and (max-width: 767px) {
+	.page-contacts-top {
+		h2 {
+			font-size: 30px !important;
+			font-weight: 600 !important;
+		}
+	}
+}
+
+/* Page Contacts ^ */
+
+/* Section Cities */
+
+.section-cities__list p {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 5px;
+}
+
+.section-cities__list p a {
+	display: flex;
+	align-items: center;
+	flex-wrap: nowrap;
+	gap: 5px;
+	font-size: 16px !important;
+	white-space: nowrap;
+}
+
+@media screen and (max-width: 574px) {
+	.section-cities__list p a img.alignnone {
+		width: 20px !important;
+	}
+}
+
+/* Section Cities ^ */
+
+/* Page Telegram */
+
+.page-telegam-text {
+	h2 {
+		font-size: 26px !important;
+		margin-bottom: 15px;
+	}
+
+	h3 {
+		font-size: 21px !important;
+		font-weight: 600 !important;
+	}
+
+	@media screen and (max-width: 767px) {
+		h2 {
+			font-size: 22px !important;
+			margin-bottom: 10px;
+		}
+
+		h3 {
+			font-size: 19px !important;
+		}
+	}
+}
+
+/* Page Telegram ^ */
+
+/* How to pay with crypto currency */
+
+.cryptocurrency-wrapper br {
+	display: none;
+}
+
+.cryptocurrency-top {
+	padding-top: 10px;
+
+	@media screen and (max-width: 574px) {
+		padding-top: 3px;
+	}
+
+	+ .cryptocurrency-item {
+		margin-top: 13px;
+	}
+}
+
+.cryptocurrency-top__title {
+	display: block;
+	font-size: 24px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 130%;
+	margin-bottom: 12px;
+	@media screen and (max-width: 574px) {
+		font-size: 21px;
+		margin-bottom: 8px;
+	}
+}
+
+.cryptocurrency-top__description {
+	display: block;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 150%;
+	@media screen and (max-width: 574px) {
+		font-size: 16px;
+	}
+}
+
+.cryptocurrency-item {
+	margin-top: 33px;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 150%;
+	@media screen and (max-width: 574px) {
+		font-size: 16px;
+	}
+
+	ul {
+		list-style-type: disc;
+	}
+
+	ol {
+		list-style-type: decimal;
+	}
+
+	strong {
+		font-weight: 700;
+	}
+
+	a {
+		text-decoration: underline;
+		text-decoration-thickness: from-font;
+
+		&:hover {
+			text-decoration: none;
+		}
+	}
+
+	@media screen and (max-width: 574px) {
+		margin-top: 24px;
+	}
+}
+
+.cryptocurrency-item__head {
+	display: flex;
+	align-items: center;
+	position: relative;
+	z-index: 1;
+	@media screen and (max-width: 574px) {
+		align-items: flex-start;
+	}
+
+	> span {
+		width: 40px;
+		min-width: 40px;
+		height: 40px;
+		padding: 5px;
+		background-color: #fff;
+		border-radius: 50%;
+		margin-right: 14px;
+		@media screen and (max-width: 574px) {
+			width: 30px;
+			min-width: 30px;
+			height: 30px;
+			padding: 4px;
+			margin-right: 10px;
+		}
+
+		> i {
+			width: 100%;
+			height: 100%;
+			border-radius: 50%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			padding-bottom: 1px;
+			padding-left: 1px;
+			text-align: center;
+			font-size: 18px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 150%;
+			color: #fff;
+			@media screen and (max-width: 574px) {
+				padding-bottom: 0;
+				padding-left: 1px;
+				font-size: 14px;
+			}
+		}
+	}
+
+	> div {
+		font-size: 21px;
+		font-style: normal;
+		font-weight: 700;
+		line-height: 150%;
+		@media screen and (max-width: 574px) {
+			padding-top: 3px;
+			font-size: 18px;
+			line-height: 130%;
+		}
+
+		a {
+			text-decoration: underline;
+		}
+	}
+
+	> p {
+		display: none;
+	}
+}
+
+.cryptocurrency-item__body {
+	padding-top: 10px;
+
+	> * {
+		margin-bottom: 17px;
+		@media screen and (max-width: 574px) {
+			margin-bottom: 8px;
+		}
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	> ol {
+		font-weight: 700;
+		padding-left: 0;
+		@media screen and (max-width: 574px) {
+			padding-left: 0;
+		}
+
+		> li {
+			margin-bottom: 7px;
+			@media screen and (max-width: 574px) {
+				margin-bottom: 8px;
+			}
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+
+		ul {
+			font-weight: 400;
+			margin-top: 6px;
+			padding-left: 9px;
+			@media screen and (max-width: 574px) {
+				margin-left: 0;
+			}
+		}
+	}
+}
+
+.cryptocurrency-bot {
+	margin-top: 22px;
+	@media screen and (max-width: 574px) {
+		margin-top: 16px;
+	}
+
+	> span {
+		display: block;
+		font-size: 24px;
+		font-style: normal;
+		font-weight: 700;
+		line-height: 150%;
+		margin-bottom: 15px;
+		@media screen and (max-width: 574px) {
+			font-size: 21px;
+			margin-bottom: 7px;
+		}
+	}
+
+	ul {
+		list-style-type: disc;
+		font-size: 18px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 150%;
+		margin-bottom: 17px;
+		padding-left: 27px;
+		@media screen and (max-width: 574px) {
+			font-size: 16px;
+			margin-bottom: 8px;
+			padding-left: 16px;
+			margin-left: 8px;
+		}
+	}
+
+	p {
+		font-size: 18px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 150%;
+		@media screen and (max-width: 574px) {
+			font-size: 16px;
+		}
+	}
+
+	strong {
+		font-weight: 700;
+	}
+}
+
+.cryptocurrency-screens {
+	display: flex;
+	flex-wrap: nowrap;
+	gap: 9px;
+	@media screen and (max-width: 1199px) {
+		flex-wrap: wrap;
+	}
+	@media screen and (max-width: 574px) {
+		padding-left: 0;
+	}
+
+	.screen {
+		width: 270px;
+		margin-bottom: 9px;
+		@media screen and (max-width: 574px) {
+			max-width: calc(50% - 5px);
+			width: calc(50% - 5px);
+			min-width: unset;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+			border-radius: 10px;
+			overflow: hidden;
+		}
+	}
+}
+
+/* How to pay with crypto currency ^ */
+
+
+
+
 
