--- a/wp-content/themes/medigreen-child/style.css
+++ b/wp-content/themes/medigreen-child/style.css
@@ -1456,11 +1456,17 @@ body.woocommerce-checkout form.checkout, .cart_totals {
 	h2 {
 		font-size: 26px !important;
 		margin-bottom: 15px;
+		color: #1a3a5c;
 	}
 
 	h3 {
 		font-size: 21px !important;
 		font-weight: 600 !important;
+		color: #004471;
+	}
+
+	a {
+		text-decoration: none;
 	}
 
 	@media screen and (max-width: 767px) {
@@ -1748,6 +1754,83 @@ body.woocommerce-checkout form.checkout, .cart_totals {
 }
 
 /* How to pay with crypto currency ^ */
+
+
+/* Section Screen Text */
+
+.section-screen-text {
+	h2 {
+		font-size: 26px !important;
+		margin-bottom: 15px;
+		color: #1a3a5c;
+	}
+
+	h3 {
+		font-size: 21px !important;
+		font-weight: 600 !important;
+		color: #004471;
+	}
+
+	a {
+		text-decoration: none;
+	}
+
+	@media screen and (max-width: 767px) {
+		h2 {
+			font-size: 22px !important;
+			margin-bottom: 10px;
+		}
+
+		h3 {
+			font-size: 19px !important;
+		}
+	}
+}
+
+/* Section Screen Text ^ */
+
+/* Page Contacts */
+
+.contacts-list {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+
+	li {
+		display: flex;
+		align-items: center;
+		gap: 15px;
+
+		+ li {
+			margin-top: 15px;
+		}
+
+		i {
+			flex-shrink: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 41px;
+			height: 36px;
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+			}
+		}
+
+		a {
+			color: #1a3a5c;
+		}
+	}
+
+	br {
+		display: none;
+	}
+}
+
+/* Page Contacts ^ */
 
 
 
